# LSM_project_1

./: .gitignore  .gitmodules  METRICS_GUIDE.md  Makefile  Mandelbrot_ORIGINAL.py  README.md  blocking_dynamic_26320055.err  blocking_dynamic_26320055.out  env_hpc.sh  main.py  modular_static_blocking_500x500.npy  profile.prof  profile_mpi.prof  pyproject.toml  quick_run.sh  requirements.txt  run.sh  run_experiments.sh  setup.py
PLOTS/analysis/: comprehensive_summary.csv
configs/: sweeps.yaml
job_scripts/: gen_all.sh  generate_jobscript.py  job_template.sh
legacy/: compare_results.py  non_blocking_static.py  save_results.py
mandelbrot/: __init__.py  communication.py  computation.py  scheduling.py
mlFlow_Results/: chunks_indexed.parquet  ranks_indexed.parquet  runs_indexed.parquet
numerical_optimization/: bench_results.csv  optimization.py  plot_scaling.py
postprocessing/: analysis.py  data_loading.py  load_runs.py  plot_chunk_size.py  plot_chunks.py  plot_load_balancing.py  plot_scaling_im.py  plot_scaling_problem.py  plot_scaling_proc.py  plot_scaling_ranks.py  plots.md  utils.py
postprocessingv2/: plot_chunk_size.py  plot_load_balancing.py  plot_sanity.py  plot_scaling_problem.py  plot_scaling_ranks.py  utils.py
profiling/: Mandelbrot.py  baseline_1000.prof  compare_sizes.sh  mpi_1000.prof
scripts/: README.md  postprocess.ipynb  postprocess.qmd  results_analysis.html  results_analysis.qmd
src/: __init__.py
tests/: Mandelbrot.py  README.md  generate_baseline.sh  run_mpi_and_save.py  test_configs.yaml  test_correctness.py  test_e2e.py  test_runner.sh
(+59 files in other folders)
